Fixed up the style a little so the controls and picture are visible at the same time.

--- a/photo_viewer/public/stylesheet.css
+++ b/photo_viewer/public/stylesheet.css
@@ -6,13 +6,14 @@ body {
 }
 
 #photo_meta {
-  margin: 90px 30px 30px 30px;
+  margin: 20px 30px 30px 30px;
 }
 
 #picele {
   float: right;
   height: auto;
   width: auto;
+  margin: -50px 0 0 0;
 }
 
 .filter-ctrl {
@@ -25,8 +26,6 @@ body {
   height: 98%;
 
   }
-
-
 
 
 .pic_diver {
